test/valid/while.js
while (true) { 1; }
do { 1; } while (true)
