test/invalid/dowhile.js
do { 1; } while (2)
